# ChangeLog for dev-tcltk/tcldom
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tcldom/ChangeLog,v 1.16 2011/01/05 20:37:24 hwoarang Exp $

  05 Jan 2011; Markos Chandras <hwoarang@gentoo.org> tcldom-3.1.ebuild:
  Stable on amd64 wrt bug #348027

  07 Dec 2010; Justin Lecher <jlec@gentoo.org> tcldom-3.1.ebuild:
  Multilib fix

  07 Dec 2010; Justin Lecher <jlec@gentoo.org> +files/3.1-ldflags.patch,
  -tcldom-3.0.ebuild:
  Respecting multilib and LDFLAGS, #290090 & #341883

  07 Dec 2010; Justin Lecher <jlec@gentoo.org> +files/3.1-ldflags.patch,
  -tcldom-3.0.ebuild:
  Respecting multilib and LDFLAGS, #290090 & #341883

  20 Oct 2010; Christian Faulhammer <fauli@gentoo.org> tcldom-3.1.ebuild:
  stable x86, bug 341645

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  04 Jun 2006; MATSUU Takuto <matsuu@gentoo.org> tcldom-2.6.ebuild:
  Fixed bash-3.1 issue. Bug 131148.

  03 Jun 2006; MATSUU Takuto <matsuu@gentoo.org> tcldom-3.0.ebuild,
  tcldom-3.1.ebuild:
  Changed xml2 USE flag for xml, bug 116346.

*tcldom-3.1 (03 Jun 2006)

  03 Jun 2006; MATSUU Takuto <matsuu@gentoo.org> +tcldom-3.1.ebuild:
  Version bumped.
  Fixed bash-3.1 issue, Bug 131148.

*tcldom-3.0 (26 Jun 2005)

  26 Jun 2005; MATSUU Takuto <matsuu@gentoo.org> +tcldom-3.0.ebuild:
  Version bumped.
  Added some USE flags.

  12 May 2005; Olivier Crête <tester@gentoo.org> tcldom-2.6.ebuild:
  Marking ~amd64

  06 Nov 2004; <pyrania@gentoo.org> tcldom-2.6.ebuild:
  Stable on x86.

  17 Oct 2004; David Holm <dholm@gentoo.org> tcldom-2.6.ebuild:
  Added to ~ppc.

*tcldom-2.6 (17 May 2004)

  17 May 2004; <matsuu@gentoo.org> +metadata.xml, +tcldom-2.6.ebuild:
  Initial import.
