@@ -1,6 +1,9 @@
 # ChangeLog for dev-tcltk/tclxml
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tclxml/ChangeLog,v 1.47 2011/03/27 19:46:03 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tclxml/ChangeLog,v 1.48 2011/08/13 06:34:23 xarthisius Exp $
+
+  13 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org> tclxml-3.1-r2.ebuild:
+  ppc stable wrt #348027
 
   27 Mar 2011; Brent Baude <ranger@gentoo.org> tclxml-3.2-r1.ebuild:
   stable ppc, bug 348022
